# http/http_server.go
@@ -25,13 +25,13 @@ import (
 )
 
 type Server struct {
-	UserSvc   *service.UserService
-	OtpSvc    *service.OtpService
-	SocketSvc *service.WebSocketService
+	UserSvc         *service.UserService
+	OtpSvc          *service.OtpService
+	ConversationSvc *service.ConversationService
 }
 
-func NewServer(userSvc *service.UserService, otpSvc *service.OtpService, socketSvc *service.WebSocketService) *Server {
-	return &Server{UserSvc: userSvc, OtpSvc: otpSvc, SocketSvc: socketSvc}
+func NewServer(userSvc *service.UserService, otpSvc *service.OtpService, conversationSvc *service.ConversationService) *Server {
+	return &Server{UserSvc: userSvc, OtpSvc: otpSvc, ConversationSvc: conversationSvc}
 }
 
 func (s *Server) Routes(router *gin.RouterGroup) {
@@ -61,6 +61,9 @@ func (s *Server) Routes(router *gin.RouterGroup) {
 
 	router.GET("/ws", s.ServeWs)
 	router.POST("/otps/request", s.RequestOtp)
+
+	router.GET("/conversations/:id/chats", s.Authenticate, s.GetChatList)
+	router.PUT("/conversations/:id/chats", s.Authenticate, s.UpdateMessage)
 }
 
 func (s *Server) Start() (err error) {
